# OpenGLCourse

./: CMakeLists.txt  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
Shaders/: shader.frag  shader.vert
